--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/MaxFerney/CSCI243-Project#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "express-sessions": "^1.0.6",
     "pug": "^2.0.3"
